--- a/templates/viewer/step_viewer.html
+++ b/templates/viewer/step_viewer.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}{{ step.lesson.title }} · Paso {{ step.order }}{% endblock %}
+{% block sidebar_extra %}{% endblock %}
 
 {% block head %}
 <script type="importmap">
